1 - Add Scenarios for ApproachProcess backend and frontend
